# fruityloops-mcp

./: .dockerignore  .gitignore  404.html  CONTRIBUTING.md  Dockerfile  INSTALL.md  LICENSE  README.md  USAGE_EXAMPLES.md  docker-compose.yml  index.html  install-hooks.ps1  install-hooks.sh  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  test-ci.sh
.cursor/rules/: README.mdc  documentation.mdc  git-workflow.mdc  project-conventions.mdc  python-testing.mdc
.githooks/: README.md  commit-msg  pre-commit  pre-push  prepare-commit-msg
.github/: COVERAGE_REQUIREMENTS.md  GITHUB_PAGES_SETUP.md  PULL_REQUEST_TEMPLATE.md  branch-protection-rules.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: branch-validation.yml  ci.yml  codeql.yml  coverage-check.yml  coverage-report.yml  docs.yml  merge-enforcement.yml  pr-checks.yml  protected-branches.yml  release.yml
api/midi/: index.html
api/server/: index.html
changelog/: index.html
configuration/: index.html
contributing/: index.html
development/: index.html
docs/: README.md  changelog.md  configuration.md  contributing.md  development.md  fl-studio-integration.md  git-workflow.md  index.md  installation.md  license.md  mcp-client-setup.md  midi-integration.md  quick-start.md  release-process.md  testing.md  usage.md
docs/api/: midi.md  server.md
fl-studio-integration/: index.html
git-workflow/: index.html
installation/: index.html
license/: index.html
mcp-client-setup/: index.html
midi-integration/: index.html
quick-start/: index.html
release-process/: index.html
search/: search_index.json
stylesheets/: extra.css
testing/: index.html
tests/: __init__.py  test_coverage_boost.py  test_git_hooks.py  test_integration.py  test_main.py  test_midi.py  test_midi_edge_cases.py  test_server.py  test_server_coverage.py  test_server_midi.py
usage/: index.html
(+4 files in other folders)
